PSA-005 L5-Swagger Logout
